--- a/BookShop.Model/BookShop.Model.csproj
+++ b/BookShop.Model/BookShop.Model.csproj
@@ -77,7 +77,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\BookShop.Data\BookShop.Data.csproj">
+      <Project>{42235e93-3834-4cd6-b231-82fb8ac21b8f}</Project>
+      <Name>BookShop.Data</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
