--- a/BookShop.Data/BookShop.Data.csproj
+++ b/BookShop.Data/BookShop.Data.csproj
@@ -63,13 +63,27 @@
     <Compile Include="Infastructure\IUnitOfWork.cs" />
     <Compile Include="Infastructure\RepositoryBase.cs" />
     <Compile Include="Infastructure\UnitOfWork.cs" />
+    <Compile Include="Migrations\202111150750146_InitiaDB.cs" />
+    <Compile Include="Migrations\202111150750146_InitiaDB.designer.cs">
+      <DependentUpon>202111150750146_InitiaDB.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\MenuGroupRepository.cs" />
+    <Compile Include="Repositories\MenuRepository.cs" />
+    <Compile Include="Repositories\OrderDetailsRepository.cs" />
+    <Compile Include="Repositories\OrderReposiory.cs" />
+    <Compile Include="Repositories\ProductCategoryRepository.cs" />
+    <Compile Include="Repositories\ProductRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <EmbeddedResource Include="Migrations\202111150750146_InitiaDB.resx">
+      <DependentUpon>202111150750146_InitiaDB.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BookShop.Model\BookShop.Model.csproj">
