--- a/BookShop.Web/Web.config
+++ b/BookShop.Web/Web.config
@@ -65,4 +65,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="BookShopConnection" connectionString="Data source=(local);initial catalog=BookShopOnline;integrated security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
