--- a/BookShop.Data/BookShop.Data.csproj
+++ b/BookShop.Data/BookShop.Data.csproj
@@ -71,8 +71,13 @@
     <Compile Include="Migrations\202111151745173_InitiaDB1.designer.cs">
       <DependentUpon>202111151745173_InitiaDB1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202111170638197_AddErrorTable.cs" />
+    <Compile Include="Migrations\202111170638197_AddErrorTable.designer.cs">
+      <DependentUpon>202111170638197_AddErrorTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ErrorRepository.cs" />
     <Compile Include="Repositories\MenuGroupRepository.cs" />
     <Compile Include="Repositories\MenuRepository.cs" />
     <Compile Include="Repositories\OrderDetailsRepository.cs" />
@@ -99,6 +104,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202111151745173_InitiaDB1.resx">
       <DependentUpon>202111151745173_InitiaDB1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111170638197_AddErrorTable.resx">
+      <DependentUpon>202111170638197_AddErrorTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
