--- a/BookShop.Data/BookShop.Data.csproj
+++ b/BookShop.Data/BookShop.Data.csproj
@@ -42,6 +42,14 @@
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.3\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.3\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
@@ -75,6 +83,14 @@
     <Compile Include="Migrations\202111170638197_AddErrorTable.designer.cs">
       <DependentUpon>202111170638197_AddErrorTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202111171721413_Intergare-AspnetIndetity.cs" />
+    <Compile Include="Migrations\202111171721413_Intergare-AspnetIndetity.designer.cs">
+      <DependentUpon>202111171721413_Intergare-AspnetIndetity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202111171753094_Chankey.cs" />
+    <Compile Include="Migrations\202111171753094_Chankey.designer.cs">
+      <DependentUpon>202111171753094_Chankey.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ErrorRepository.cs" />
@@ -107,6 +123,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202111170638197_AddErrorTable.resx">
       <DependentUpon>202111170638197_AddErrorTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111171721413_Intergare-AspnetIndetity.resx">
+      <DependentUpon>202111171721413_Intergare-AspnetIndetity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202111171753094_Chankey.resx">
+      <DependentUpon>202111171753094_Chankey.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
