--- a/BookShop.Web/BookShop.Web.csproj
+++ b/BookShop.Web/BookShop.Web.csproj
@@ -226,7 +226,11 @@
     <Content Include="app\components\products\productListController.js" />
     <Content Include="app\components\products\productListView.html" />
     <Content Include="app\components\products\products.module.js" />
+    <Content Include="app\components\product_categories\productCategory.module.js" />
+    <Content Include="app\components\product_categories\productCategoryListController.js" />
+    <Content Include="app\components\product_categories\productCategoryListView.html" />
     <Content Include="app\Shared\modules\bookshop.common.js" />
+    <Content Include="app\Shared\service\apiService.js" />
     <Content Include="Assets\admin\css\adminlte.css" />
     <Content Include="Assets\admin\css\adminlte.min.css" />
     <Content Include="Assets\admin\css\alt\adminlte.components.css" />
@@ -336,13 +340,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="app\components\order\" />
-    <Folder Include="app\components\product_categories\" />
     <Folder Include="app\components\roles\" />
     <Folder Include="app\components\users\" />
     <Folder Include="app\Shared\directive\" />
     <Folder Include="app\Shared\footer\" />
     <Folder Include="app\Shared\navigation\" />
-    <Folder Include="app\Shared\service\" />
     <Folder Include="App_Data\" />
     <Folder Include="Assets\client\" />
   </ItemGroup>
