--- a/BookShop.Web/BookShop.Web.csproj
+++ b/BookShop.Web/BookShop.Web.csproj
@@ -230,6 +230,8 @@
     <Content Include="app\components\product_categories\productCategory.module.js" />
     <Content Include="app\components\product_categories\productCategoryAddController.js" />
     <Content Include="app\components\product_categories\productCategoryAddView.html" />
+    <Content Include="app\components\product_categories\productCategoryEditController.js" />
+    <Content Include="app\components\product_categories\productCategoryEditView.html" />
     <Content Include="app\components\product_categories\productCategoryListController.js" />
     <Content Include="app\components\product_categories\productCategoryListView.html" />
     <Content Include="app\Shared\directives\pagerDirective.html" />
@@ -237,6 +239,7 @@
     <Content Include="app\Shared\filter\statusFilter.js" />
     <Content Include="app\Shared\modules\bookshop.common.js" />
     <Content Include="app\Shared\service\apiService.js" />
+    <Content Include="app\Shared\service\commonService.js" />
     <Content Include="app\Shared\service\notificationService.js" />
     <Content Include="Assets\admin\css\adminlte.css" />
     <Content Include="Assets\admin\css\adminlte.min.css" />
